<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context="fragments.Fragment_Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"/>

        <ImageView
            android:id="@+id/bubble2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_bubble2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:translationX="-80dp"
            android:translationY="-140dp"/>

        <ImageView
            android:id="@+id/bubble1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_bubble1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:translationX="-170dp"
            android:translationY="-170dp"/>

        <ImageView
            android:id="@+id/bubble3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_bubble3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:translationX="60dp"
            android:translationY="-60dp"/>

        <ImageView
            android:id="@+id/bubble4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_bubble4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:translationX="190dp"
            android:translationY="160dp"/>

        <TextView
            android:id="@+id/textloging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            android:translationY="-35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textwelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_message"
            android:textSize="20sp"
            android:layout_marginTop="-200dp"
            android:translationY="-85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textloging"
            app:layout_constraintStart_toStartOf="@id/guideline1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field1"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/textwelcome"
            style="@style/input_login">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_rounded_edittext"
                android:hint="@string/user"
                android:alpha="0.9"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fiel2"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/field1"
            app:passwordToggleEnabled="true"
            style="@style/input_login2">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/main_rounded_edittext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button1"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/fiel2"
            style="@style/button_style_next"/>

        <Button
            android:id="@+id/button2"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/button1"
            style="@style/button_style_cancel"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
